--- a/package.json
+++ b/package.json
@@ -28,25 +28,25 @@
   },
   "dependencies": {
     "@prisma/client": "5.5.2",
-    "eslint-config-next": "^14.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-turbo": "^1.11.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "turbo": "latest"
+    "eslint-config-next": "^16.1.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-config-turbo": "^2.7.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "turbo": "^1.11.3"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/jest": "^29.5.11",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "dotenv-cli": "^7.3.0",
-    "eslint": "^8.55.0",
-    "jest": "^29.6.0",
-    "prettier": "^3.1.0",
+    "@faker-js/faker": "^10.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
+    "@types/jest": "^30.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "dotenv-cli": "^11.0.0",
+    "eslint": "^9.39.2",
+    "jest": "^30.2.0",
+    "prettier": "^3.7.4",
     "prisma": "5.5.2",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.1"
   },
   "prisma": {
