--- a/package.json
+++ b/package.json
@@ -57,6 +57,14 @@
     "npm": ">=7.0.0"
   },
   "packageManager": "bun@1.0.2",
+  "overrides": {
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
+  },
+  "resolutions": {
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
+  },
   "workspaces": [
     "apps/*",
     "packages/*"
