--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@quenti/emails": "workspace:*",
     "@quenti/env": "workspace:*",
     "@quenti/lib": "workspace:*",
     "@quenti/prisma": "workspace:*",
     "email-providers": "^2.0.1",
-    "next": "^14.0.4",
-    "next-auth": "^4.24.5"
+    "next": "^16.1.1",
+    "next-auth": "^4.24.13"
   },
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx",
