--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -13,10 +13,8 @@
     "@tiptap/react": "^2.1.12",
     "dayjs": "^1.11.10",
     "lodash.merge": "^4.6.2",
-    "next": "^14.0.4",
+    "next": "^16.1.1",
     "next-seo": "^6.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "xss": "^1.0.14"
   },
   "scripts": {
@@ -25,7 +23,11 @@
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.9",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17"
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3"
+  },
+  "peerDependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   }
 }
