--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -10,15 +10,17 @@
     "@quenti/lib": "workspace:*",
     "@react-email/components": "^0.0.7",
     "@react-email/tailwind": "^0.0.9",
-    "react": "^18.2.0",
     "react-email": "1.9.5",
     "resend": "^1.1.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43"
+    "@types/react": "^19.2.7"
   },
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix"
+  },
+  "peerDependencies": {
+    "react": "^19.2.3"
   }
 }
