--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -18,6 +18,10 @@
     "@quenti/prisma": "workspace:*",
     "@quenti/types": "workspace:*",
     "@tiptap/html": "^2.1.12",
+    "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-typography": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "@trpc/client": "^10.43.3",
     "@trpc/next": "^10.43.3",
     "@trpc/react-query": "^10.43.3",
@@ -26,8 +30,8 @@
     "@upstash/redis": "^1.22.1",
     "email-providers": "^2.0.1",
     "nanoid": "^5.0.3",
-    "next": "^14.0.4",
-    "next-auth": "^4.24.5",
+    "next": "^16.1.1",
+    "next-auth": "^4.24.13",
     "next-axiom": "^0.18.0",
     "otp-generator": "^4.0.1",
     "prom-client": "^14.2.0",
