--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,33 @@
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
-# Prisma
-DATABASE_URL=mysql://user:password@localhost:3306/db
+# Prisma (Neon Postgres)
+# Recommended for most uses (Neon pooled)
+DATABASE_URL=postgresql://USER:PASSWORD@POOLER_HOST/DATABASE?sslmode=require
+# For uses requiring a connection without pgbouncer
+DATABASE_URL_UNPOOLED=postgresql://USER:PASSWORD@HOST/DATABASE?sslmode=require
+
+# Parameters for constructing your own connection string
+PGHOST=POOLER_HOST
+PGHOST_UNPOOLED=HOST
+PGUSER=USER
+PGDATABASE=DATABASE
+PGPASSWORD=PASSWORD
+
+# Parameters for Vercel Postgres Templates
+POSTGRES_URL=postgresql://USER:PASSWORD@POOLER_HOST/DATABASE?sslmode=require
+POSTGRES_URL_NON_POOLING=postgresql://USER:PASSWORD@HOST/DATABASE?sslmode=require
+POSTGRES_USER=USER
+POSTGRES_HOST=POOLER_HOST
+POSTGRES_PASSWORD=PASSWORD
+POSTGRES_DATABASE=DATABASE
+POSTGRES_URL_NO_SSL=postgresql://USER:PASSWORD@POOLER_HOST/DATABASE
+POSTGRES_PRISMA_URL=postgresql://USER:PASSWORD@POOLER_HOST/DATABASE?connect_timeout=15&sslmode=require
+
+# Neon Auth environment variables for Next.js (if used)
+NEXT_PUBLIC_STACK_PROJECT_ID=
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=
+STACK_SECRET_SERVER_KEY=
 
 # Next Auth
 # You can generate the secret via 'openssl rand -base64 32' on Linux
