--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -96,6 +96,7 @@
     "react-top-loading-bar": "^2.3.1",
     "satori": "^0.10.9",
     "sharp": "^0.32.6",
+    "styled-jsx": "5.1.6",
     "superjson": "^1.13.1",
     "thumbhash": "^0.1.1",
     "use-fit-text": "^2.4.0",
