feat: fix functions for vercel

--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -39,6 +39,7 @@
     "@quenti/env": "workspace:*",
     "@quenti/images": "workspace:*",
     "@quenti/inngest": "workspace:*",
+    "@quenti/integrations": "workspace:*",
     "@quenti/interfaces": "workspace:*",
     "@quenti/lib": "workspace:*",
     "@quenti/payments": "workspace:*",
