--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@quenti/integrations": ["packages/integrations/index.ts"],
+      "@quenti/integrations/*": ["packages/integrations/*"]
+    },
     "target": "es2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
